# Mavvrik-MCP-v1

./: Dockerfile  README.md  decode.py  pyproject.toml  requirements.txt
src/: client.py  config.py  formatting.py  schemas.py  security.py  server.py
src/tools/: finops.py
