[project]
name = "mavvrik-mcp-server"
version = "1.0.0"
description = "Production-grade Mavvrik MCP Server with Identity Passthrough"
requires-python = ">=3.11"
dependencies = [
    "mcp[fastmcp]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.20.0"
]

[project.scripts]
start = "src.server:main"